tests/reference/asr-statement1-653abd8.stderr
ASR verify pass error: ASR verify: The variable in ArrayItem must be an array, not a scalar
 --> tests/statement1.f90:5:1
  |
5 | dfloat(i,j) = i*j
  | ^^^^^^^^^^^ failed here
